updatee kamel