@@ -10,38 +10,35 @@ import org.springframework.web.bind.annotation.*;
 import tn.sage.rh.employee.dto.EmployeeDto;
 import tn.sage.rh.employee.dto.EmployeeFreeRequestDto;
 import tn.sage.rh.employee.dto.EmployeeRequestDto;
+import tn.sage.rh.employee.dto.OperatorAvailabilityDTO;
 
 import java.security.Principal;
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/v1/employees")
 @RequiredArgsConstructor
 @Validated
 public class EmployeeController {
+
     private final EmployeeService employeeService;
     private final EmployeeMapper employeeMapper = Mappers.getMapper(EmployeeMapper.class);
 
     @PostMapping
-    public ResponseEntity<?> save(
-            @Valid @RequestBody EmployeeRequestDto request
-    ) {
+    public ResponseEntity<Void> save(@Valid @RequestBody EmployeeRequestDto request) {
         employeeService.save(request);
         return ResponseEntity.accepted().build();
     }
 
     @PostMapping("/batch-save")
-    public ResponseEntity<?> batchSave(
-            @Valid @RequestBody List<EmployeeRequestDto> employees
-    ) {
+    public ResponseEntity<Void> batchSave(@Valid @RequestBody List<EmployeeRequestDto> employees) {
         employeeService.batchSave(employees);
         return ResponseEntity.accepted().build();
     }
 
     @PutMapping("/{id}")
-    public ResponseEntity<?> update(@PathVariable Long id, @Valid @RequestBody EmployeeRequestDto request) {
+    public ResponseEntity<Void> update(@PathVariable Long id, @Valid @RequestBody EmployeeRequestDto request) {
         employeeService.update(id, request);
         return ResponseEntity.accepted().build();
     }
@@ -51,6 +48,7 @@ public class EmployeeController {
         employeeService.delete(id);
         return ResponseEntity.noContent().build();
     }
+
     @GetMapping
     public ResponseEntity<List<EmployeeDto>> findAll(Principal connectedUser) {
         return ResponseEntity.ok(
@@ -70,12 +68,14 @@ public class EmployeeController {
                         .toList()
         );
     }
+
     @GetMapping("/{id}")
     public ResponseEntity<EmployeeDto> findById(@PathVariable Long id) {
         return employeeService.findByIdOrMatricule(id, null)
                 .map(employee -> ResponseEntity.ok(employeeMapper.toDTO(employee)))
                 .orElseGet(() -> ResponseEntity.notFound().build());
     }
+
     @GetMapping("/available")
     public ResponseEntity<List<EmployeeDto>> getAvailableOperators(
             @RequestParam @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate startDate,
@@ -88,27 +88,42 @@ public class EmployeeController {
                         .toList()
         );
     }
+
     @PutMapping("/mark-free")
-    public ResponseEntity<Void> markOperatorsAsFree(
-            @Valid @RequestBody EmployeeFreeRequestDto request
-    ) {
+    public ResponseEntity<Void> markOperatorsAsFree(@Valid @RequestBody EmployeeFreeRequestDto request) {
         employeeService.markOperatorsAsFree(request.getEmployeeIds());
         return ResponseEntity.ok().build();
     }
+
     @PutMapping("/mark-busy")
-    public ResponseEntity<Void> markOperatorsAsBusy(
-            @Valid @RequestBody EmployeeFreeRequestDto request
-    ) {
+    public ResponseEntity<Void> markOperatorsAsBusy(@Valid @RequestBody EmployeeFreeRequestDto request) {
         employeeService.markOperatorsAsBusy(request.getEmployeeIds());
         return ResponseEntity.ok().build();
     }
 
+    /**
+     * ✅ Pool des employés "free" (opérateurs disponibles)
+     * ✅ IMPORTANT: le superviseur connecté ne voit pas ses propres opérateurs
+     */
     @GetMapping("/free")
-    public ResponseEntity<List<EmployeeDto>> getFreeEmployees() {
-        List<Employee> freeEmployees = employeeService.findFreeEmployees();
-        List<EmployeeDto> employeeDtos = freeEmployees.stream()
-                .map(employeeMapper::toDTO)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(employeeDtos);
+    public ResponseEntity<List<EmployeeDto>> getFreeEmployees(Principal connectedUser) {
+        return ResponseEntity.ok(
+                employeeService.findFreeEmployeesForCurrentSupervisor(connectedUser)
+                        .stream()
+                        .map(employeeMapper::toDTO)
+                        .toList()
+        );
     }
+    /*
+    @GetMapping("/operators/free")
+    public ResponseEntity<List<EmployeeDto>> getFreeOperators() {
+        return ResponseEntity.ok(employeeService.getFreeOperators());
+    }
+    */
+    // tn/sage/rh/employee/EmployeeController.java
+    @GetMapping("/operators/free")
+    public ResponseEntity<List<OperatorAvailabilityDTO>> freeOperators() {
+        return ResponseEntity.ok(employeeService.getFreeOperatorsForOperationalManager());
+    }
+
 }
